--- a/parts/urlbar.css
+++ b/parts/urlbar.css
@@ -62,3 +62,15 @@
 #tracking-protection-icon-container {
     padding-inline-start: 6px !important;
 }
+
+@-moz-document url(chrome://browser/content/browser.xul),
+url(chrome://browser/content/browser.xhtml)  {
+    #urlbar:not([breakout-extend]) #urlbar-background {
+        border: 1px solid var(--urlbar-background-new-tab) !important;
+        background: var(--urlbar-background-new-tab) !important;
+    }
+
+    .urlbar-input::placeholder, .searchbar-textbox::placeholder {
+        opacity: 0.3 !important;
+    }
+}
