--- a/parts/urlbar.css
+++ b/parts/urlbar.css
@@ -1,5 +1,3 @@
-@namespace xul "http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul";
-
 :root {
     --urlbar-icon-padding: 4px !important;
 }
@@ -63,14 +61,14 @@
     padding-inline-start: 6px !important;
 }
 
-@-moz-document url(chrome://browser/content/browser.xul),
-url(chrome://browser/content/browser.xhtml)  {
-    #urlbar:not([breakout-extend]) #urlbar-background {
+#urlbar:has(.urlbar-input-container[pageproxystate="invalid"]) {
+    &:not([breakout-extend]) #urlbar-background {
         border: 1px solid var(--urlbar-background-new-tab) !important;
         background: var(--urlbar-background-new-tab) !important;
     }
 
     .urlbar-input::placeholder, .searchbar-textbox::placeholder {
-        opacity: 0.3 !important;
+        opacity: 0.5 !important;
     }
 }
+
