@namespace xul url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

--- a/parts/urlbar.css
+++ b/parts/urlbar.css
@@ -1,3 +1,5 @@
+@namespace xul url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
 :root {
     --urlbar-icon-padding: 4px !important;
 }
